--- a/index.html
+++ b/index.html
@@ -3751,7 +3751,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
